# bancolom_ia

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/agent/: ai_agent.py
backend/core/: config_loader.py  models.py  prompt_loader.py
backend/core/factories/: db_factory.py
backend/core/interfaces/: db_interface.py
backend/core/providers/db/: sql_lite_handler.py
backend/factories/: db_factory.py  embedding_factory.py  llm_factory.py  reranker_factory.py  vector_db_factory.py
backend/indexing/: indexer.py
backend/interfaces/: db_interface.py  embedding_interface.py  llm_interface.py  reranker_interface.py  vector_db_interface.py
backend/mcp/: server.py
backend/mcp/tools/: get_article_by_url.py  list_categories.py  search_knowledge_base.py
backend/prompts/: chat_v1.yml
backend/providers/db/: sql_lite_handler.py
backend/providers/embedding/: cohere_handler.py
backend/providers/llm/: cohere_handler.py
backend/providers/reranker/: cohere_reranker_handler.py
backend/providers/vector_db/: pinecone_handler.py
backend/rag/: retriever.py
backend/scraping/: cleaner.py  finder.py
config/: config.cfg
docs/resources/: diagrama_de_componentes.drawio
frontend/: app.py
scripts/: run_indexer.py  run_scraper.py
tests/test_backend/test_agent/: test_ai_agent.py
tests/test_backend/test_indexing/: test_indexer.py
tests/test_backend/test_mcp/test_tools/: test_get_article_by_url.py  test_list_categories.py  test_search_knowledge_base.py
tests/test_backend/test_scraping/: test_cleaner.py  test_finder.py
utils/: utils.py
