[project]
name = "bancolom-ia"
version = "1.0.0"
description = ""
authors = [
    {name = "Diego Lizarazo",email = "imdlizarazo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "pinecone (>=8.1.1,<9.0.0)",
    "cohere (>=5.21.1,<6.0.0)",
    "mcp (>=1.27.0,<2.0.0)",
    "fastmcp (>=3.2.0,<4.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
]

[tool.poetry]
packages = [
    {include = "backend"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
